# voy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
benchmarks/: package-lock.json  package.json  playwright.config.mjs  run.sh  serve.mjs
benchmarks/charts/: generate.mjs
benchmarks/page/: bench.mjs  data-loader.mjs  index.html
benchmarks/test-results/: .last-run.json
benchmarks/tests/: benchmark.spec.mjs
examples/create-wasm-app/: README.md  bootstrap.js  embed-worker.js  index.html  index.js  package-lock.json  package.json  search-worker.mjs  webpack.config.js
examples/create-wasm-app/lib/: lexical-index.mjs  opfs-store.mjs  shard-manager.mjs  tokenize.mjs
examples/create-wasm-app/tests/: lexical.test.mjs
src/: lib.rs
src/engine/: engine.rs  mod.rs
src/engine/tests/: fixtures.rs  mod.rs
src/wasm/: fns.rs  mod.rs  tests.rs  types.rs  voy.rs
tests/: web.rs
