[package]
name = "voy-search"
version = "1.0.0"
authors = ["Daw-Chih Liou <dawochih.liou@gmail.com>"]
edition = "2024"
description = "a vector similarity search engine in WASM"
documentation = "https://github.com/tantaraio/voy#readme"
readme = "README.md"
homepage = "https://github.com/tantaraio/voy"
repository = "https://github.com/tantaraio/voy"
license = "MIT OR Apache 2.0"
keywords = ["webassembly", "wasm", "rust", "embeddings", "vector search", "similarity search", "nearest neighbor"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.114"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tsify = "0.5.6"
js-sys = "0.3"

[dev-dependencies]
rstest = "0.26.1"
wasm-bindgen-test = "0.3.64"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
